[191]: More PR comment cleanup